# ToolStore

./: .gitignore  LICENSE  README.md  cli.py  config.py  main.py  orchestrator.py  pyproject.toml  queries.json  query_matches.json  requirements.txt
builder/: mcp_builder.py  parser.py
index/: downloader.py  registry.py
loader/: cache.py  repo.py
main_pipeline/: mcp_builder.py  sementic_search.py  tool_loader.py  tool_store.py
search/: rerank.py  semantic.py
testing/: eval_RAG_Rerank.py  eval_build.py
testing/eval_set/: queries.json
testing/eval_set/build_eval/: 1_raw_build_accuracy.csv  2_error_type_counts.csv  3_accuracy_by_size.csv  4_syntax_errors.csv  5_detailed_results.csv  6_raw_build_timing.csv  7_build_time_by_size.csv  summary.txt
testing/eval_set/retrieval_eval/: 1_raw_accuracy.csv  1_variant_raw_accuracy.csv  2_accuracy_by_size.csv  2_accuracy_by_size_all_variants.csv  3_robustness_delta_vs_original.csv  3_subset_accuracy_by_size.csv  4_rerank_score_distribution.csv  4_rerank_scores_per_variant.csv
toon_chroma_db/: chroma.sqlite3
utils/: env_merger.py  security_scanner.py
vector_db_creation/: embed_toon.py  tools.toon  toon_file_creation.py
vector_db_creation/toon_chroma_db/: chroma.sqlite3
