[project]
name = "toolshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.3.5",
    "google-generativeai>=0.3.2",
    "langchain>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.1.0",
    "langchain-google-genai>=0.0.1",
    "langchain-mcp-adapters>=0.1.14",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.1.0",
    "mcp>=1.22.0",
    "ollama>=0.6.1",
    "psutil>=7.1.3",
    "psutils>=3.3.11",
    "sentence-transformers>=5.1.2",
]
