[project]
name = "toolstorepy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.0",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.2",
    "transformers>=5.1.0",
]

[project.scripts]
toolstorepy = "toolstorepy.cli:main"

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
toolstorepy = { workspace = true }

[dependency-groups]
dev = [
    "toolstorepy",
]

