[project]
name = "toolstorepy"
version = "0.1.0"
description = "Automatic MCP server builder — describe tools in plain English, get a ready-to-run server."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.0",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.2",
    "transformers>=5.1.0",
]

[project.scripts]
toolstorepy = "toolstorepy.cli:main"

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
toolstorepy = { workspace = true }

[dependency-groups]
dev = [
    "toolstorepy",
]
